--- a/style.css
+++ b/style.css
@@ -2,43 +2,43 @@
 	width: 960px;
 	background-color: #2b5b84;
 	padding: 10px;
-	}
+}
 #header {
 	position: relative;
-	}
+}
 #header img {
 	width: 40%;
 	display: inline-block;
-	}
+}
 #search {
 	top: 0px;
    	right: 0px;
     	position: absolute;
-	}
+}
 #search p {
 	font: 10pt arial;
 	color: white;
 	text-align: right;
 	margin: 0px 25px 0px 30px;
-	}
+}
 #search a {
 	color: #ffde57;
-	}
+}
 #searchbar {
 	background-color: DarkSlateGray;
 	border-radius: 10px;
 	padding: 20px 30px 20px 30px;
 	box-shadow: 2px 2px black;
-	}
+}
 span {
 	color: black;
-	}
+}
 .button {
 	background-color: royalblue;
 	border-radius: 5px;
 	color: white;
-	}
-#navbar {
+}
+#nav {
 	font: 16pt arial;
 	text-align: center;
 	background-color: steelblue;
@@ -46,59 +46,58 @@ span {
 	padding: 20px 30px 20px 30px;
 	margin: 0px 20px 0px 50px;
 	box-shadow: 2px 2px black;
-	}
-#navbar a {
+}
+#nav a {
 	color: white;
 	text-decoration: none;
 	margin: 0px 20px 0px 20px;
-	}
-#nav {
+}
+#side-nav {
 	width: 20%;
 	vertical-align: top;
 	text-align: center;
 	display: inline-block;
 	margin: 20px 0px 20px 70px;
 	padding-right: 20px;
-	}
-#nav ul {
+}
+#side-nav ul {
 	list-style-position: inside;
 	color: white;
 	text-align: center;
 	margin: 0px;
 	padding: 0px;
-	}
-#nav li {
+}
+#side-nav li {
 	font: 12pt arial;
 	text-decoration: underline;
 	padding: 5px 0px 5px 0px;
-	}
+}
 #main-content {
 	width: 65%;
 	text-align: center;
 	display: inline-block;
 	margin: 20px 20px 20px 0px;
 	padding-right: 30px;
-	}
+}
 #main-content p {
 	font: 10pt arial;
 	color: white;
-	}
+}
 #zen p {
 	color: #ffde57;
 	font: 14pt arial;
 	font-style: italic;
 	margin: 10px 0px 10px 0px;
-	}
+}
 #python p {
 	font: 12pt arial;
 	margin: 10px 0px 10px 0px;
-	}
+}
 #body {
 	width: 960px;
-	
 	padding: 10px;
 	text-align: center;
-	}
+}
 .content {
 	width: 29%;
 	vertical-align: top;
@@ -109,16 +108,16 @@ span {
 	padding: 0px 100px 0px 20px;
 	text-align: center;
 	display: inline-block;
-	}
+}
 .content h3 {
 	font: 12pt arial;
 	font-weight: bold;
 	margin: 5px 0px 10px 0px;
-	}
+}
 .content a {
 	color: lightblue;
 	text-decoration: none;
-	}
+}
 #footer {
 	width: 960px;
 	font: 8pt arial;
@@ -126,15 +125,15 @@ span {
 	background: linear-gradient(#2b5b84, steelblue);
 	text-align: center;
 	padding: 0px 10px 0px 10px;
-	}
+}
 #botnav {
 	font: 10pt arial;
 	text-align: center;
 	padding: 40px 30px 0px 30px;
 	margin: 0px 20px 0px 50px;
-	}
+}
 #botnav a {
 	color: lightsteelblue;
 	text-decoration: none;
 	margin: 0px 20px 0px 20px;
-	}
+}
